# grade-consolidator

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ci.yml  config_UL1IN002_partiel_2026.yaml  config_example.yaml  pyproject.toml
src/consolidate_grades/: __init__.py  consolidate.py
tests/: test_consolidate.py
