[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consolidate-grades"
version = "0.1.0"
description = "Consolidate student grades from multiple TA files into a Moodle-compatible CSV."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "François Bouchet", email = "francois.bouchet@lip6.fr" },
]

keywords = ["moodle", "grades", "teaching", "university"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "odfpy>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
consolidate-grades = "consolidate_grades.consolidate:main"

[project.urls]
Homepage = "https://github.com/fbouchet/grade-consolidator"
Issues = "https://github.com/fbouchet/grade-consolidator/issues"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles this
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["consolidate_grades"]
